fix style for slide card (tags) add visible like for post

--- a/src/components/Slide/Slide.module.scss
+++ b/src/components/Slide/Slide.module.scss
@@ -17,6 +17,12 @@ html {
   position: relative;
 }
 
+.link {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+
 .card__wrapper {
   display: flex !important;
   flex-direction: column;
